--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <h1 align="center">Welcome to my website!!</h1>
+  <p align="center">sowmiyan is my best friend</p>
 </body>
 </html>
