--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
   <h1 align="center">Welcome to my website!!</h1>
   <p align="center">sowmiyan is my best friend</p>
+  <p align="center">😊😊😊</p>
 </body>
 </html>
