Added today's date

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/main.css">
+  <script type="text/javascript" src="./src/index.js"></script>
   <title>Deepan.com</title>
 </head>
 <body>
@@ -12,5 +13,7 @@
   <p align="center">sowmiyan is my best friend</p>
   <p align="center">😊😊😊</p>
   <p align="center">😇😇😇</p>
+  <p align="center">11/04/23</p>
+  <a href="./src/javascript.html">javascript playground</a>
 </body>
 </html>
